# tudat-wasm

./: .gitignore  CMakeLists.txt
cmake_modules/: toolchain-emscripten.cmake
docs/: index.html  testWorker.js  tudat_wasm_test.js  tudatpy_wasm.js
docs/api/: index.html  modules.html
docs/api/assets/: custom.css  highlight.css  navigation.js  search.js
docs/api/classes/: astro.time_representation.DateTime.html
docs/api/enums/: astro.element_conversion.CartesianElementIndices.html  astro.element_conversion.KeplerianElementIndices.html  astro.element_conversion.SphericalStateIndices.html  dynamics.environment_setup.atmosphere.AtmosphereModelType.html  dynamics.environment_setup.ephemeris.EphemerisType.html  dynamics.environment_setup.gravity_field.GravityFieldType.html  dynamics.propagation_setup.acceleration.AvailableAcceleration.html  dynamics.propagation_setup.integrator.AvailableIntegrators.html  dynamics.propagation_setup.integrator.CoefficientSets.html  dynamics.propagation_setup.propagator.RotationalPropagatorType.html  dynamics.propagation_setup.propagator.TranslationalPropagatorType.html  math.interpolators.AvailableLagrangeInterpolatorTypes.html  math.interpolators.AvailableLookupScheme.html  math.interpolators.BoundaryInterpolationType.html  math.numerical_integrators.AvailableIntegrators.html  math.numerical_integrators.CoefficientSets.html  math.root_finders.AvailableRootFinders.html  trajectory_design.transfer_trajectory.TransferLegTypes.html
docs/api/functions/: astro.element_conversion.cartesian_to_keplerian.html  astro.element_conversion.cartesian_to_spherical.html  astro.element_conversion.eccentric_to_mean_anomaly.html  astro.element_conversion.eccentric_to_true_anomaly.html  astro.element_conversion.keplerian_to_cartesian.html  astro.element_conversion.mean_to_eccentric_anomaly.html  astro.element_conversion.spherical_to_cartesian.html  astro.element_conversion.true_to_eccentric_anomaly.html  astro.frame_conversion.inertial_to_rsw_rotation_matrix.html  astro.frame_conversion.inertial_to_tnw_rotation_matrix.html  astro.time_representation.epoch_from_julian_day.html  astro.time_representation.julian_day_from_epoch.html  astro.two_body_dynamics.compute_kepler_orbit_period.html  astro.two_body_dynamics.propagate_kepler_orbit.html  data.get_atmosphere_tables_path.html  data.get_earth_orientation_path.html  data.get_ephemeris_path.html  data.get_gravity_models_path.html  data.get_resource_path.html  data.get_space_weather_path.html  data.get_spice_kernel_path.html  default.html  dynamics.environment_setup.atmosphere.exponential_atmosphere.html  dynamics.environment_setup.atmosphere.nrlmsise00.html  dynamics.environment_setup.create_system_of_bodies.html  dynamics.environment_setup.ephemeris.constant.html  dynamics.environment_setup.ephemeris.direct_spice.html  dynamics.environment_setup.ephemeris.tabulated.html  dynamics.environment_setup.get_default_body_settings.html  dynamics.environment_setup.gravity_field.central.html  dynamics.environment_setup.gravity_field.central_spice.html  dynamics.environment_setup.gravity_field.spherical_harmonic.html  dynamics.propagation_setup.acceleration.aerodynamic.html  dynamics.propagation_setup.acceleration.point_mass_gravity.html  dynamics.propagation_setup.acceleration.radiation_pressure.html  dynamics.propagation_setup.acceleration.spherical_harmonic_gravity.html  dynamics.propagation_setup.create_acceleration_models.html  dynamics.propagation_setup.integrator.bulirsch_stoer.html  dynamics.propagation_setup.integrator.runge_kutta_fixed_step_size.html  dynamics.propagation_setup.integrator.runge_kutta_variable_step_size.html  (+24 more)
docs/api/interfaces/: Matrix3d.html  TudatModule.html  TudatModuleOptions.html  Vector3d.html  Vector6d.html  VectorXd.html  dynamics.environment.Body.html  dynamics.environment.SystemOfBodies.html  dynamics.environment_setup.BodySettings.html  dynamics.environment_setup.SystemOfBodySettings.html  dynamics.environment_setup.atmosphere.AtmosphereSettings.html  dynamics.environment_setup.ephemeris.EphemerisSettings.html  dynamics.environment_setup.gravity_field.GravityFieldSettings.html  dynamics.propagation_setup.acceleration.AccelerationSettings.html  dynamics.propagation_setup.integrator.IntegratorSettings.html  dynamics.propagation_setup.propagator.PropagationTerminationSettings.html  dynamics.propagation_setup.propagator.PropagatorSettings.html  dynamics.simulator.SimulationResults.html  dynamics.simulator.SingleArcSimulator.html  math.interpolators.InterpolatorSettings.html  math.numerical_integrators.IntegratorSettings.html  math.root_finders.RootFinderSettings.html  trajectory_design.transfer_trajectory.TransferLeg.html  trajectory_design.transfer_trajectory.TransferLegSettings.html  trajectory_design.transfer_trajectory.TransferNodeSettings.html  trajectory_design.transfer_trajectory.TransferTrajectory.html
docs/api/modules/: astro.element_conversion.html  astro.frame_conversion.html  astro.html  astro.time_representation.html  astro.two_body_dynamics.html  constants.html  data.html  dynamics.environment.html  dynamics.environment_setup.atmosphere.html  dynamics.environment_setup.ephemeris.html  dynamics.html  (+15 more)
src/tudatpy_wasm/: CMakeLists.txt  eigen_wasm.cpp
src/tudatpy_wasm/dynamics/environment/: expose_environment_wasm.cpp
src/tudatpy_wasm/dynamics/environment_setup/: expose_environment_setup_wasm.cpp
src/tudatpy_wasm/dynamics/environment_setup/ground_station/: expose_ground_station_wasm.cpp
src/tudatpy_wasm/dynamics/parameters/: expose_parameters_wasm.cpp
src/tudatpy_wasm/dynamics/propagation_setup/: expose_propagation_setup_wasm.cpp
src/tudatpy_wasm/dynamics/simulator/: expose_simulator_wasm.cpp
src/tudatpy_wasm/estimation/observations/observations_geometry/: expose_observations_geometry_wasm.cpp
src/tudatpy_wasm/interface/calceph/: expose_calceph_wasm.cpp
src/tudatpy_wasm/math/numerical_integrators/: expose_numerical_integrators_wasm.cpp
tests/wasm/: CMakeLists.txt  test_propagation_node.cjs
tests/wasm/src/: main.cpp  testEstimation.cpp
tests/wasm/web/: app.js
(+19 files in other folders)
